yaml-examples/network-policies/ingress-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
spec:
# The network policy allows the traffic coming from the openshift-ingress namespace.
# because that namespace has the network.openshift.io/policy-group: ingress label.
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
# The network policy targets all the pods in the current namespace when the podSelector parameter is empty.
  podSelector: {}
